<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/search_title"
        style="@style/SearchInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@id/search_author"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_title_et"
            style="@style/SearchEditTextStyle"
            android:hint="@string/search_title"
            android:inputType="text"
            android:maxLength="50"
            android:nextFocusForward="@id/search_author_et" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/search_author"
        style="@style/SearchInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@id/search_year"
        app:layout_constraintTop_toBottomOf="@id/search_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_author_et"
            style="@style/SearchEditTextStyle"
            android:hint="@string/search_author"
            android:inputType="text"
            android:maxLength="50"
            android:nextFocusForward="@id/search_year_et" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/search_year"
        style="@style/SearchInputLayoutStyle"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/search_volume"
        app:layout_constraintTop_toBottomOf="@id/search_author"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/search_year_less_btn">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_year_et"
            style="@style/SearchEditTextStyle"
            android:hint="@string/search_year"
            android:inputType="number"
            android:maxLength="4"
            android:nextFocusForward="@id/search_volume_et" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/search_year_less_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="d"
        android:background="@drawable/year_button_background_selector"
        app:layout_constraintBottom_toTopOf="@id/search_volume"
        app:layout_constraintTop_toBottomOf="@id/search_author"
        app:layout_constraintRight_toLeftOf="@id/search_year_equals_btn"
        app:layout_constraintLeft_toRightOf="@id/search_year"/>

    <Button
        android:id="@+id/search_year_equals_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="@dimen/margin_default"
        android:text="="
        android:background="@drawable/year_button_background_selector"
        app:layout_constraintBottom_toTopOf="@id/search_volume"
        app:layout_constraintTop_toBottomOf="@id/search_author"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/search_year_less_btn"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/search_volume"
        style="@style/SearchInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@id/search_inventory_number"
        app:layout_constraintTop_toBottomOf="@id/search_year">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_volume_et"
            style="@style/SearchEditTextStyle"
            android:hint="@string/search_volume"
            android:inputType="text"
            android:maxLength="2"
            android:nextFocusForward="@id/search_inventory_number_et" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/search_inventory_number"
        style="@style/SearchInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@id/search_signature"
        app:layout_constraintTop_toBottomOf="@id/search_volume">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_inventory_number_et"
            style="@style/SearchEditTextStyle"
            android:hint="@string/search_inventory_number"
            android:inputType="text"
            android:maxLength="10"
            android:nextFocusForward="@id/search_signature_et" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/search_signature"
        style="@style/SearchInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@id/search_main_signature"
        app:layout_constraintTop_toBottomOf="@id/search_inventory_number">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_signature_et"
            style="@style/SearchEditTextStyle"
            android:hint="@string/search_signature"
            android:inputType="number"
            android:maxLength="10"
            android:nextFocusForward="@id/search_main_signature_et" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/search_main_signature"
        style="@style/SearchInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@id/search_availability_btn"
        app:layout_constraintTop_toBottomOf="@id/search_signature">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_main_signature_et"
            style="@style/SearchEditTextStyle"
            android:hint="@string/search_main_signature"
            android:inputType="text"
            android:maxLength="10" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/search_availability_btn"
        style="@style/SearchButtonStyle"
        android:text="@string/search_availability"
        app:layout_constraintBottom_toTopOf="@id/search_type_btn"
        app:layout_constraintTop_toBottomOf="@id/search_main_signature" />

    <Button
        android:id="@+id/search_type_btn"
        style="@style/SearchButtonStyle"
        android:text="@string/search_type"
        app:layout_constraintBottom_toTopOf="@id/search_category_btn"
        app:layout_constraintTop_toBottomOf="@id/search_availability_btn" />

    <Button
        android:id="@+id/search_category_btn"
        style="@style/SearchButtonStyle"
        android:text="@string/search_category"
        app:layout_constraintBottom_toTopOf="@id/search_empty_view"
        app:layout_constraintTop_toBottomOf="@id/search_type_btn" />

    <View
        android:id="@+id/search_empty_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_component_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_category_btn" />

</android.support.constraint.ConstraintLayout>